# CryptoGO

./: .gitignore  D1-Architecture&ThreatModel.md  README.md  README_Information  README_Information.md  pyproject.toml  test_clip.py  verify_syntax.py
cryptogo/: __init__.py  gui.py  lockout.json  test_key_manager.py  test_signatures.py
cryptogo/encryption/: __init__.py  file_vault.py  hybrid_vault.py  key_manager.py
tests/: test_file_vault.py  test_hybrid_vault.py  test_key_manager.py  test_signatures.py
