[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptogo"
version = "1.0"
description = "Secure file encryption module using ChaCha20-Poly1305"

readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "cryptography>=42.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]